2014-09-19  Ryosuke Niwa  <rniwa@webkit.org>

        Leak of mallocs under StructureSet::OutOfLineList::create
        https://bugs.webkit.org/show_bug.cgi?id=136970

        Reviewed by Filip Pizlo.

        addOutOfLine should free the old list when expanding the capacity.

        * bytecode/StructureSet.cpp:
        (JSC::StructureSet::addOutOfLine):

2014-09-18  Joseph Pecoraro  <pecoraro@apple.com>

        Unreviewed rollout r173731. Broke multiple builds.

        * inspector/JSGlobalObjectInspectorController.cpp:
        (Inspector::JSGlobalObjectInspectorController::JSGlobalObjectInspectorController):
        (Inspector::JSGlobalObjectInspectorController::connectFrontend):
        * inspector/JSGlobalObjectInspectorController.h:
        * inspector/remote/RemoteInspector.h:
        * inspector/remote/RemoteInspector.mm:
        (Inspector::RemoteInspector::RemoteInspector):
        (Inspector::RemoteInspector::setupFailed):
        (Inspector::RemoteInspector::start):
        (Inspector::RemoteInspector::stopInternal):
        (Inspector::RemoteInspector::setupXPCConnectionIfNeeded):
        (Inspector::RemoteInspector::xpcConnectionReceivedMessage):
        (Inspector::RemoteInspector::xpcConnectionFailed):
        (Inspector::RemoteInspector::receivedSetupMessage):
        (Inspector::globalAutomaticInspectionState): Deleted.
        (Inspector::RemoteInspector::updateDebuggableAutomaticInspectCandidate): Deleted.
        (Inspector::RemoteInspector::sendAutomaticInspectionCandidateMessage): Deleted.
        (Inspector::RemoteInspector::setupSucceeded): Deleted.
        (Inspector::RemoteInspector::waitingForAutomaticInspection): Deleted.
        (Inspector::RemoteInspector::receivedAutomaticInspectionConfigurationMessage): Deleted.
        (Inspector::RemoteInspector::receivedAutomaticInspectionRejectMessage): Deleted.
        * inspector/remote/RemoteInspectorConstants.h:
        * inspector/remote/RemoteInspectorDebuggable.cpp: